--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="nav-wrapper container">
                 <a href="#" class="brand-logo">Daniel Wilson</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="https://github-college.github.io/web-server-scripting-wilshub/" target="_blank">Assingment 1</a></li>
+                    <li><a href="https://github-college.github.io/web-server-scripting-wilshub/" target="_blank">Assignment 1</a></li>
                     <li><a href="">P2</a></li>
                     <li><a href="">P3</a></li>
                     <li><a href="">P4</a></li>
