--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="https://github-college.github.io/web-server-scripting-wilshub/" target="_blank">Assignment 1</a></li>
                     <li><a href="">P2</a></li>
-                    <li><a href="">P3</a></li>
+                    <li><a href="http://dangeorgewilson.gwiddle.co.uk/P3/contact_details.html">P3</a></li>
                     <li><a href="">P4</a></li>
-                    <li><a href="">P5</a></li>
+                    <li><a href="http://dangeorgewilson.gwiddle.co.uk/P5/guestbook.html">P5</a></li>
                     <li><a href="">M2</a></li>
                     <li><a href="">M3</a></li>
                     <li><a href="">M4</a></li>
